--- a/client/src/screens/CarCreate.css
+++ b/client/src/screens/CarCreate.css
@@ -1,4 +1,4 @@
 .create-form {
-  background-color: darkslategrey;
+  background-image: linear-gradient(to left, darkslategrey, #858371);
   height: 100vh;
 }
