--- a/client/src/screens/Register.css
+++ b/client/src/screens/Register.css
@@ -1,4 +1,50 @@
 .register-form {
   height: 100vh;
-  background-color: crimson;
+  background-color: #0c3c4a;
+  margin: 100px;
+  text-align: center;
+}
+.register-title {
+  padding-top: 100px;
+  font-size: 50px;
+  text-align: center;
+  color: cadetblue;
+}
+
+.username-div-register {
+  display: grid;
+  padding: 20px;
+  text-align: left;
+  width: 20%;
+  justify-content: center;
+  margin-left: 39%;
+  color: cadetblue;
+}
+
+.email-div {
+  display: grid;
+  padding: 20px;
+  text-align: left;
+  width: 20%;
+  justify-content: center;
+  margin-left: 39%;
+  color: cadetblue;
+}
+
+.password-div-register {
+  display: grid;
+  padding: 20px;
+  text-align: left;
+  width: 20%;
+  justify-content: center;
+  margin-left: 39%;
+  margin-bottom: 10px;
+  color: cadetblue;
+}
+
+.register-submit {
+  border: 2px solid black;
+  background-color: white;
+  font-size: 16px;
+  padding: 5px;
 }
