--- a/client/src/screens/CarCreate.css
+++ b/client/src/screens/CarCreate.css
@@ -2,3 +2,25 @@
   background-image: linear-gradient(to left, darkslategrey, #858371);
   height: 100vh;
 }
+
+.create-title {
+  padding-top: 20px;
+  text-align: left;
+  padding-left: 10px;
+  font-size: 30px;
+}
+
+.input-div {
+  display: grid;
+  justify-content: center;
+  padding-top: 50px;
+}
+
+input {
+  margin: 15px;
+}
+
+.input-div {
+  text-align: center;
+  margin-top: 10px;
+}
