--- a/client/src/screens/CarDetail.css
+++ b/client/src/screens/CarDetail.css
@@ -1,4 +1,50 @@
 .detail-page {
   background-color: #858f9b;
-  height: 100vh;
+  height: auto;
+}
+
+.base-div {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.detail-title {
+  padding-top: 30px;
+  padding-left: 30px;
+  font-size: 40px;
+  text-transform: capitalize;
+}
+
+.info-div {
+  padding-left: 30px;
+}
+
+.image {
+  padding-left: 30px;
+}
+
+.upgrade-div {
+  display: flex;
+  padding-bottom: 10px;
+}
+
+.upgrade-image-div {
+  width: 300px;
+}
+
+.upgrade-image {
+  margin-left: 30px;
+  width: 220px;
+  height: auto;
+}
+
+.upgrade-info {
+  margin-bottom: 10px;
+}
+
+.buttons {
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  height: 200px;
 }
